--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,8 @@ deploy:
     skip-cleanup: true
     github-token: $GITHUB_TOKEN # Set in travis-ci.org dashboard, marked secure.
     keep-history: true
+    edge:
+      source: biodranik/dpl
+      branch: fix-xenial-pages-error
     on:
-      branch: master
+      all_branches: true
